<resources>
    <string name="app_name">Social Login</string>

    <string name="title_facebook_fragment">Facebook</string>
    <string name="title_google_fragment">Google+</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_linked_in">Sign in with LinkedIn</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="share_fb">Facebook Share</string>
    <string name="facebook_app_id">596028327096505</string>

</resources>
